[project]
name = "numa-python-reduce-watermark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynumaflow",
]

[tool.uv.sources]
pynumaflow = { git = "https://github.com/numaproj/numaflow-python.git", subdirectory = "packages/pynumaflow", rev = "b37f25fef9588a736a1e7957e1b61cc228d25f4e" }
